@@ -7,7 +7,7 @@ plugins {
   id 'jacoco'
   id 'io.spring.dependency-management' version '1.0.11.RELEASE'
   id 'org.flywaydb.flyway' version '7.11.2'
-  id 'org.springframework.boot' version '2.5.2'
+  id 'org.springframework.boot' version '2.5.3'
   id 'org.owasp.dependencycheck' version '6.2.2'
   id 'com.github.ben-manes.versions' version '0.39.0'
   id 'org.sonarqube' version '3.3'
@@ -110,6 +110,12 @@ tasks.withType(Test) {
   testLogging {
     exceptionFormat = 'full'
   }
+}
+
+task fortifyScan(type: JavaExec)  {
+  main = "uk.gov.hmcts.fortifyclient.FortifyClientMainApp"
+  classpath += sourceSets.test.runtimeClasspath
+  jvmArgs = ['--add-opens=java.base/java.lang.reflect=ALL-UNNAMED']
 }
 
 checkstyle {
@@ -215,7 +221,7 @@ dependencyManagement {
       entry 'groovy-xml'
     }
     //CVE-2019-14900
-    dependencySet(group: 'org.hibernate', version: '5.5.4.Final') {
+    dependencySet(group: 'org.hibernate', version: '5.5.6') {
       entry 'hibernate-core'
     }
     // avoid CVE-2021-29425
@@ -284,7 +290,8 @@ dependencies {
   testImplementation group: 'org.apache.commons', name: 'commons-email', version: '1.5'
   testImplementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.12.0'
   testImplementation group: 'org.apache.pdfbox', name: 'preflight', version: '2.0.24', withoutJunit4
-  testImplementation group: 'com.github.tomakehurst', name: 'wiremock-jre8', version: '2.29.1', withoutJunit4
+  testImplementation group: 'com.github.tomakehurst', name: 'wiremock-jre8', version: '2.30.0', withoutJunit4
+  testImplementation group: 'com.github.hmcts', name: 'fortify-client', version: '1.2.1', classifier: 'all'
 
   integrationTestImplementation sourceSets.main.runtimeClasspath
   integrationTestImplementation sourceSets.test.runtimeClasspath
@@ -307,8 +314,6 @@ dependencies {
   contractTestImplementation group: 'org.springframework.boot', name: 'spring-boot-starter-test'
   contractTestImplementation group: 'uk.gov.hmcts.reform', name: 'service-auth-provider-client', version: '3.1.2'
   contractTestImplementation group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa'
-  contractTestImplementation group: 'uk.gov.hmcts.reform', name: 'service-auth-provider-client', version: '3.1.2'
-  contractTestImplementation group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa'
 
   contractTestImplementation group: 'org.bouncycastle', name: 'bcprov-jdk15on', version: versions.bouncycastle
   contractTestImplementation group: 'org.bouncycastle', name: 'bcpkix-jdk15on', version: versions.bouncycastle
@@ -318,7 +323,6 @@ dependencies {
 
   contractTestImplementation group: 'org.apache.pdfbox', name: 'pdfbox', version: '2.0.24'
 
-  contractTestImplementation group: 'uk.gov.hmcts.reform', name: 'service-auth-provider-client', version: '3.1.2'
   contractTestImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: versions.junit
   contractTestRuntimeOnly group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: versions.junit
 }
